# IronSightPro

./: .dockerignore  .gitignore  CITATION.cff  Cargo.toml  Dockerfile  Makefile  README.md  SUPPORT.md  docker-compose.yml  ironsight.example.toml  rustfmt.toml
.agents/workflows/: add-crate.md  add-ui-component.md  build-and-run.md  docker.md  start-hot-reload.md  translations.md
.github/: FUNDING.yml
.github/DISCUSSION_TEMPLATE/: ideas.yml  q-a.yml  show-and-tell.yml
.github/workflows/: labeler.yml  rust-security.yml
audit/: missings_and_wrong_implementations.md
crates/ironsight-core/: Cargo.toml
crates/ironsight-core/src/: diff.rs  error.rs  filter.rs  lib.rs  process_info.rs  snapshot.rs  spy.rs  system_info.rs  tests.rs
crates/ironsight-heuristic/: Cargo.toml
crates/ironsight-heuristic/src/: decay.rs  engine.rs  lib.rs  signals.rs
crates/ironsight-kernel/: Cargo.toml
crates/ironsight-kernel/src/: dispatcher.rs  events.rs  lib.rs
crates/ironsight-kernel/src/linux/: mod.rs
crates/ironsight-memory/: Cargo.toml
crates/ironsight-memory/src/: dump.rs  lib.rs  maps.rs  scanner.rs  watcher.rs
crates/ironsight-network/: Cargo.toml
crates/ironsight-network/src/: audit.rs  dns.rs  lib.rs  socket_mapper.rs
crates/ironsight-report/: Cargo.toml
crates/ironsight-report/src/: formatter.rs  incident.rs  lib.rs
crates/ironsight-response/: Cargo.toml
crates/ironsight-response/src/: actions.rs  exclusions.rs  handler.rs  lib.rs
crates/ironsight-security/: Cargo.toml
crates/ironsight-security/src/: audit.rs  entropy.rs  hash.rs  lib.rs  path_analysis.rs  signature.rs
crates/ironsight-service/: Cargo.toml
crates/ironsight-service/src/: config.rs  main.rs  privilege.rs  watchdog.rs
crates/ironsight-ui/: Cargo.toml  package-lock.json  package.json
crates/ironsight-ui/assets/css/: components.css  dashboards.css  layout.css  markdown.css  qstatic.css  variables.css
crates/ironsight-ui/src/: app.css  bridge.rs  i18n.rs  main.rs
crates/ironsight-ui/src-tauri/: Cargo.toml  tauri.conf.json
crates/ironsight-ui/src-tauri/src/: main.rs
crates/ironsight-ui/src/components/: dashboard.rs  ironsight_widgets.rs  mod.rs  shared.rs
crates/ironsight-ui/src/components/accordion/: style.css
crates/ironsight-ui/src/components/alert_dialog/: style.css
crates/ironsight-ui/src/components/aspect_ratio/: style.css
crates/ironsight-ui/src/components/avatar/: style.css
crates/ironsight-ui/src/components/badge/: component.rs  style.css
crates/ironsight-ui/src/components/button/: style.css
crates/ironsight-ui/src/components/card/: style.css
crates/ironsight-ui/src/components/dashboards/: alert_card.rs  change_feed.rs  data_table.rs  glass_panel.rs  log_feed.rs  memory_map.rs  metadata_panel.rs  mod.rs  progress_bar.rs  scanner_results.rs  stat_card.rs  status_badge.rs  timeline.rs
crates/ironsight-ui/src/components/dialog/: style.css
crates/ironsight-ui/src/components/edr_widgets/: action_button.rs  config_slider.rs  event_stream.rs  memory_map_bar.rs  mod.rs  signal_chip.rs  threat_gauge.rs  topology_graph.rs
crates/ironsight-ui/src/components/hover_card/: style.css
crates/ironsight-ui/src/components/input/: style.css
crates/ironsight-ui/src/components/pagination/: style.css
crates/ironsight-ui/src/components/qstatic/: basic_inputs.rs  mod.rs  overlay.rs  shell.rs
crates/ironsight-ui/src/components/textarea/: component.rs
crates/ironsight-ui/src/components/visualize/: chart.rs  code_block.rs  document_viewer.rs  flow_graph.rs  markdown_view.rs  mod.rs  rest_endpoint.rs  service_card.rs
crates/ironsight-ui/src/lib/: theme.css
crates/ironsight-ui/src/lib/components/shell/: ActivityBar.svelte  TitleBar.svelte
crates/ironsight-ui/src/routes/: +page.svelte
crates/ironsight-ui/src/views/: alerts.rs  config.rs  course_layout.rs  course_pages.rs  docs.rs  kernel.rs  memory.rs  mod.rs  network.rs  processes.rs  reports.rs  response.rs  security.rs  settings.rs  showcase.rs  threats.rs
crates/ironsight-ui/src/views/dashboards/: crate_monitoring.rs  heuristic_monitor.rs  incident_reporting.rs  mod.rs  network_monitoring.rs  pro_dash.rs  process_explorer.rs  process_monitor.rs  response_dashboard.rs
crates/ironsight-ui/templates/: Crate Monitoring.html  Hu.html  Incident Reporting.html  Network Monitoring Dashboard.html  Pro Dash.tsx  Process.tsx  Prox.html  Response Dashboard.html
docker/: Dockerfile  docker-compose.yml  ironsight.toml
scripts/: backup.sh  benchmark.sh  check-privileges.sh  cleanup.sh  cross-build.sh  health-check.sh  install.sh  setup-dev.sh  uninstall.sh
wiki/: Architecture.md  Detection-Engine.md  Home.md  _Footer.md  _Sidebar.md
