[package]
name = "ironsight-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Core process monitoring — snapshot, diff, filter, tree, events"

[dependencies]
sysinfo.workspace = true
crossbeam-channel.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
tracing.workspace = true
thiserror.workspace = true

[target.'cfg(unix)'.dependencies]
nix = { version = "0.31", features = ["signal", "process"] }
