[package]
name = "ironsight-memory"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Memory analysis — pattern scanning, region watching, protection change detection"

[dependencies]
ironsight-core.workspace = true
serde.workspace = true
regex.workspace = true
xxhash-rust.workspace = true
tracing.workspace = true
thiserror.workspace = true
