[package]
name = "ironsight-memory"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Memory analysis — pattern scanning, region watching, protection change detection"

[dependencies]
ironsight-core.workspace = true
serde.workspace = true
regex.workspace = true
xxhash-rust = { workspace = true, features = ["xxh3"] }
tracing.workspace = true
thiserror.workspace = true
anyhow.workspace = true
chrono.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
minidump-writer = "0.11"
