[package]
name = "ironsight-report"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "SIEM-ready reporting — JSON schema, Splunk HEC, Microsoft Sentinel export"

[dependencies]
ironsight-core.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true
whoami.workspace = true
tracing.workspace = true
thiserror.workspace = true
reqwest = { version = "0.13", features = ["json"] }
tokio = { workspace = true }
anyhow.workspace = true
