[package]
name = "ironsight-security"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Binary integrity analysis — hash, entropy, signature, module enumeration"

[dependencies]
ironsight-core.workspace = true
serde.workspace = true
sha2.workspace = true
hex.workspace = true
tracing.workspace = true
thiserror.workspace = true
