[package]
name = "ironsight-ui"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Dioxus desktop dashboard — dark hacker-themed EDR visualization"

[[bin]]
name = "ironsight-ui"
path = "src/main.rs"

[dependencies]
ironsight-core.workspace = true
ironsight-security.workspace = true
ironsight-network.workspace = true
ironsight-memory.workspace = true
ironsight-heuristic.workspace = true
ironsight-report.workspace = true
dioxus.workspace = true
sysinfo.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
tokio.workspace = true
tracing.workspace = true
pulldown-cmark = "0.10"
dioxus-primitives = { git = "https://github.com/DioxusLabs/components", version = "0.0.1", default-features = false, features = ["router"] }
